@@ -1,16 +1,13 @@
 package com.maticrobots.nsd_rs_example_app;
 
 import android.content.Context;
-import android.util.Log;
 
 import androidx.annotation.NonNull;
 import androidx.startup.Initializer;
 
-import com.maticrobots.nsd_rs.RustAppContentInitializer;
 import com.maticrobots.nsd_rs.RustArcBoxDynAny;
+import com.maticrobots.rust_android_utilities.RustInitialization;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import kotlin.Unit;
@@ -31,6 +28,6 @@ public class RustNSDExample implements Initializer<Unit> {
     @NonNull
     @Override
     public List<Class<? extends Initializer<?>>> dependencies() {
-        return Arrays.asList(RustAppContentInitializer.class);
+        return List.of(RustInitialization.class);
     }
 }
